MAINT: Update .gitignore.

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,12 @@
+# etags/ctags
+TAGS
+
+# emacs buffer files
+*~
+
+# IPython checkpoint files
+.ipynb_checkpoints
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
