--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,13 @@
-ipython==2.3.0
-matplotlib==1.4.0
-mock==1.0.1
-nose==1.3.4
-numpy==1.9.0
-pandas==0.14.1
+ipython[notebook]
+matplotlib
+mock>=1.0.1
+nose>=1.3.4
+numpy
+pandas>=0.16.0
 pyparsing==2.0.2
 python-dateutil==2.2
-pytz==2014.7
-scipy==0.14.0
-seaborn==0.4.0
+pytz
+scipy>=0.14.0
+seaborn>=0.5.0
 six==1.8.0
 wsgiref==0.1.2
